# concDoc

./: .replit  README.md  app.py  database.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--app-route-enviaractividad-methods-GET-POST-def-enviaractividad-if-not-check-se-1764116932680_1764116932680.txt
templates/: classpage.html  enviaractividad.html  home.html  login.html  plan.html  plan_carga.html  register.html  register_alumno.html  register_docente.html  select_register_type.html  temasitem.html
