[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "datetime>=5.5",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "gevent>=25.9.1",
    "pymysql>=1.1.2",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
    "tempfile",
    "weasyprint>=66.0",
    "werkzeug>=3.1.3",
]
